--- a/src/app/blog/entries/2025-03-30_01-00__trie-search.mdx
+++ b/src/app/blog/entries/2025-03-30_01-00__trie-search.mdx
@@ -56,6 +56,11 @@ Creates a new TrieSearch instance. We’ll need one to index and search with it.
 
 A new searchTrie instance
 
+Example:
+
+```tsx
+const trie = newSearchTrie();
+```
 
 
 ### addWordToTrie(trie, word, value)
@@ -78,6 +83,10 @@ null
 
 Example:
 
+```tsx
+const trie = newSearchTrie();
+addWord(trie, 'hello', {id: 1, name: 'hello'});
+```
 
 ### makeTrieFromObjectList(list, [indexKey = ‘name’])
 
@@ -98,6 +107,47 @@ Examples:
 
 With a default shaped object:
 
+```tsx
+const trie = makeTrieFromObjectList([
+  { id: 'value1', name: 'value 1' },
+  { id: 'value2', name: 'value 2' },
+  { id: 'value3', name: 'value 3' }
+]);
+```
+specifying the indexKey:
+
+```tsx
+const trie = makeTrieFromObjectList([
+  { id: 'value1', tag: 'value 1' },
+  { id: 'value2', tag: 'value 2' },
+  { id: 'value3', tag: 'value 3' }
+], 'tag');
+
+
+const trie = makeTrieFromObjectList([
+  { 
+    id: 'value1', 
+    complex: {
+      val:'value 1',
+      anything: {...}
+    }
+  },
+  { 
+    id: 'value2', 
+    complex: {
+      val:'value 2',
+      anything: {...}
+    }
+  },
+  { 
+    id: 'value3', 
+    complex: {
+      val:'value 3',
+      anything: {...}
+    }
+  },
+], 'complex.val');
+```
 
 ### searchTrie(trie, word)
 
@@ -115,6 +165,9 @@ A Set of leaf nodes under the search prefix path
 
 Example:
 
+```tsx
+const searchTrieResults = searchTrie(trie, 'har')
+```
 
 ### filterListByTrie(list, trie, word)
 
@@ -134,3 +187,12 @@ An array of the filtered Items, starting with the results of the trie search.
 
 Example
 
+```tsx
+const originalList = [
+  { id: 'value1', name: 'value 1' },
+  { id: 'value2', name: 'value 2' },
+  { id: 'value3', name: 'value 3' }
+];
+const trie = makeTrieFromObjectList(originalList);
+const filteredList = filterListByTrie(list, trie, 'value');
+```
